test/test_examples/syntactic_examples/syntax_error/error_statement_90.zig
// Syntax error: Identifier instead of "else" keyword

const ifj = @import("ifj24.zig");

pub fn main() void {
    var x: i32 = 32;
    const y : i32 = 89;

    if(y < x)
    {
        processItem(1458242);
    }
    el_98SE_
    {
        _ = handleOddItem(53878);
    }
}